ops/primary-backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary-backend
  namespace: sitewatch
spec:
  selector:
    matchLabels:
      app: primary-be
  template:
    metadata:
      labels:
        app: primary-be
    spec:
      containers:
        - name: primary-be
          image: bikaxh01/sitewatch-backend:60ca11086f77c38b565ee073cabae911390f1bde
          ports:
            - containerPort: 8000
          volumeMounts:
          - name: secret
            mountPath: /home/app/.env
            subPath: .env
      volumes:
        - name: secret
          secret: 
           secretName: sitewatch-be-secret
           items: 
            - key: .env
              path: .env 
---
apiVersion: v1
kind: Service
metadata:
  name: be-service
  namespace: sitewatch
spec:
  selector:
    app: primary-be
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
