ops/primary-backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-apps-ingress
  namespace: sitewatch
  annotations:
    cert-manager.io/cluster-issuer: be-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: be.sitewatch.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: be-service
            port:
              number: 8000
  tls:
  - hosts:
    - be.sitewatch.tech 
    secretName: letsencrypt-prod
